Update blerpc generator for message

--- a/swift-reactive-blerpc/src/main/resources/MessageGeneratorTemplate.mustache
+++ b/swift-reactive-blerpc/src/main/resources/MessageGeneratorTemplate.mustache
@@ -1,5 +1,6 @@
 import Foundation
 import SwiftBleRpcLibrary
+import AURACommonProto
 
 /// Extension for {{swiftPackageName}}{{messageName}} which adds encode to Data and decode from Data methods.
 extension {{swiftPackageName}}{{messageName}} {
