--- a/swift-reactive-blerpc/src/main/resources/MessageGeneratorTemplate.mustache
+++ b/swift-reactive-blerpc/src/main/resources/MessageGeneratorTemplate.mustache
@@ -24,9 +24,9 @@ extension {{swiftPackageName}}{{messageName}} {
         {{#isProtoObject}}
             proto.{{name}} = try {{swiftPackageName}}{{protoType}}.bleRpcDecode(data: data.subdata(in: {{fromByte}}..<min({{toByte}}, data.count)))
         {{/isProtoObject}}
-        {{#isProtoObjectDifferentPackage}}
+        {{#isExternalProtoObject}}
             proto.{{name}} = try {{protoType}}.bleRpcDecode(data: data.subdata(in: {{fromByte}}..<min({{toByte}}, data.count)))
-        {{/isProtoObjectDifferentPackage}}
+        {{/isExternalProtoObject}}
         }
 {{/fields}}
         return proto
@@ -44,9 +44,9 @@ extension {{swiftPackageName}}{{messageName}} {
     {{#isProtoObject}}
         data.append(try {{swiftPackageName}}{{protoType}}.bleRpcEncode(proto: proto.{{name}}))
     {{/isProtoObject}}
-    {{#isProtoObjectDifferentPackage}}
+    {{#isExternalProtoObject}}
         data.append(try {{protoType}}.bleRpcEncode(proto: proto.{{name}}))
-    {{/isProtoObjectDifferentPackage}}
+    {{/isExternalProtoObject}}
     {{#isPrimitiveType}}
         data.append(try SwiftBleRpcLibrary.ProtoEncoder.encode(object: proto.{{name}}, from: {{fromByte}}, to: {{toByte}}, type: {{swiftType}}))
     {{/isPrimitiveType}}
